--- a/src/App.css
+++ b/src/App.css
@@ -92,3 +92,71 @@ a{
  gap: 1rem;
  border-radius: 1rem;
 }
+.brand-name-container{
+  padding: 10px;
+  margin-top: 1rem;
+  width: 100%;
+  background-color: #FFFF; 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.single-Product-container{
+  margin-top: 1rem;
+  width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     gap: 2rem;
+}
+.img-container{
+      width: 300px;
+      padding: 1rem;
+      background-color: #FFFF;
+}
+.product-details{
+  background-color: #FFFF;
+     display: flex;
+     /* align-items: center; */
+     flex-direction: column;
+     gap: 1rem;
+     padding: 1rem;
+}
+.img-choice-container{
+  margin-top: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  align-items: center;
+}
+.choice{
+  background-color: #FFFF;
+  border: 1px solid blue;
+  padding: 1rem;
+}
+.cart-container{
+  margin-top: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.cart{
+  background-color: #FFFF;
+  padding: 10px;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+.cart-img{
+   display: flex;
+}
+.hide{
+  display: none;
+}
+.color{
+  color: black;
+}
