--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+
+
 *{
   margin: 0;
   padding: 0;
   font-family:"Poppins", sans-serif; 
+  box-sizing: border-box;
 }
 body{
   background-color: #eaeaea;
@@ -206,4 +209,207 @@ a{
     color: green;
     background-color: #FFFF;
     cursor: pointer;
+}
+.form-container-frist{
+   margin-top: 1rem; 
+   width: 100%;
+ 
+   object-fit: cover;
+   display: flex;
+   gap: 1rem;
+   justify-content: center;
+   align-items: center;
+   padding: 3rem;
+   
+}
+.form-container-second{
+  border-radius: 1rem;
+ 
+   width: 320px;
+   height: 400px;
+  
+   padding: 1rem;
+   /* backdrop-filter: blur(30px); */
+   border: 1px solid white;
+    background-color: #FFFF;  
+   box-sizing: border-box;
+}
+.form{
+  width: 100%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ gap: 22px;
+
+}
+#text{
+ background: transparent; 
+  width: 100%;
+  padding: 5px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid black;
+}
+#email{
+  background: transparent; 
+  width: 100%;
+  padding: 5px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid black;
+}
+#password{
+  background: transparent; 
+  width: 100%;
+  padding: 5px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid black;
+}
+#confrim{
+  background: transparent; 
+  width: 100%;
+  padding: 5px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid black;
+}
+.submit-button{
+  width: 100%;
+  height: 30px;
+  border: none;
+  background-color: blue;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.div{
+  width: 100%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ gap: 2px;
+  
+}
+.navbar{
+  width: 100%;
+  background-color: #FFFF;
+  padding: 1rem;
+  
+}
+
+.img-container-second{
+  margin-top: 1rem;
+ width: 100%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ gap: 4rem;
+
+}
+.img-container-third{
+  margin-top: 1rem;
+ width: 100%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ gap: 4rem;
+
+}
+.acount-container{
+  margin-top: 2rem;
+ 
+      
+}
+.acount{
+  background-color: #FFFF;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  
+  align-items: center;
+}
+.acount-image{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+ 
+}
+.logout-button{
+  margin-top: 1rem;
+  width: 100px;
+  height: 25px;
+  background-color: rgb(49, 163, 49);
+  color: #FFFF;
+  border: none;
+  cursor: pointer;
+}
+.product-acount-product{
+  margin-top: 2rem;
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+.img-product{
+  background-color: #FFFF;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+.shop-now{
+  background-color: black;
+  color: #FFFF;
+  width: 100%;
+  height: 25px;
+  border: none;
+  cursor: pointer;
+  border-radius: 1rem;
+}
+.heading{
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+.women-shoping-container{
+      background-color: #FFFF;
+      padding: 1rem;
+     display: flex;
+     gap: 1rem;
+     flex-direction: column;
+     align-items: center;
+}
+.women-image-men{
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.shop-now-buttons{
+  background-color: black;
+  color: #FFFF;
+  width: 300px;
+  height: 25px;
+  border: none;
+  cursor: pointer;
+  border-radius: 1rem;
+}
+.div-container{
+  display: flex;
+  justify-content: space-around;
+}
+.uppercontainer{
+  width: 100%;
+  background-image: url("https://thumbs.dreamstime.com/b/two-girls-choosing-shoes-store-happy-young-female-friends-fashion-92595883.jpg");
+  background-repeat: repeat;
+  background-position: center;
+  /* filter: blur(2px); */
+  background-color:  rgba(0, 0, 0, 0.7); ;
+}
+.opacity{
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
 }
